# paper-summarizer

./: .gitignore  README.md  arxiv_email_workflow.py  evaluate_test_set.py  last_run_state.json  main.py  pyproject.toml  test.py  visualize_comparison.py  visualize_prompt_vs_lora.py
reports/: comparison_prompt_vs_lora_10_samples.html  comparison_prompt_vs_lora_5_samples.html  comparison_report_5_samples.html
src/: data_pipeline.py  get_arxiv_api.py  prompt.py  qwen_summarizer.py  train.py
