[project]
name = "paper-summarizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "sentencepiece>=0.2.1",
    "peft>=0.17.0",
    "torch>=2.12.0",
    "transformers>=5.9.0",
    "pandas>=3.0.3",
    "arxiv>=4.0.0",
    "evaluate>=0.4.6",
    "rouge-score>=0.1.2",
    "bert-score>=0.3.13",
    "wandb>=0.27.0",
    "bitsandbytes>=0.49.2",
]
